--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>[Your Name Here]'s Bouncing balls</title>
+    <title>Schroeder's Bouncing Balls</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <h1>bouncing balls</h1>
     <canvas></canvas>
+    <img src="mouse.png" alt="mouse" width="10" height="15">
 
     <script src="main.js"></script>
   </body>
